Name:                fhcontainer
Version:             0.2
Synopsis:            Fedora Haskell containers tool
Description:
    A small tool for quickly running temporary containers.
Homepage:            https://github.com/juhp/fhcontainer
Bug-reports:         https://github.com/juhp/fhcontainer/issues
License:             GPL-3
License-file:        COPYING
Author:              Jens Petersen <petersen@fedoraproject.org>
Maintainer:          Jens Petersen <petersen@fedoraproject.org>
Copyright:           2018-2023 Jens Petersen <petersen@fedoraproject.org>
Category:            Distribution
Build-type:          Simple
Extra-source-files:  README.md TODO ChangeLog.md
Cabal-version:       >=1.6
Tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4,
                     GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7,
                     GHC == 9.0.2, GHC == 8.2.7, GHC == 9.4.5

source-repository head
  type:     git
  location: https://github.com/fedora-haskell/fhcontainer

Executable fhcontainer
    Main-is:       Main.hs
    Other-modules: Dist
                   List
                   Paths_fhcontainer
                   Podman
                   Run
    Hs-source-dirs: src
    Build-depends: base < 5,
                   aeson,
                   bytestring,
                   extra,
                   optparse-applicative,
                   safe,
                   simple-cmd >= 0.2.1,
                   simple-cmd-args >= 0.1.3,
                   text
    if impl(ghc<8.0)
        Build-depends: semigroups
    GHC-options:   -fwarn-missing-signatures -Wall
